[FIXED] Change absolute paths to relative ones in release notes

--- a/catznip/docs/release_notes/r12_3.md
+++ b/catznip/docs/release_notes/r12_3.md
@@ -1,6 +1,6 @@
 # Catznip R12.3
 
-![Catznip_R12_3.jpg](/release_notes/r12_3/Catznip_R12_3.jpg)
+![Catznip_R12_3.jpg](Catznip_R12_3.jpg)
 
 No Kitty magic in this one, but it does bring you 'Bakes on Mesh' and is up to date with the current Linden Lab viewer (with some minor bug and crash fix sprinkles to make it complete).
 
